--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -325,17 +325,23 @@
 // Styles
 
 html,
-body {
+body,
+main {
   padding: 0;
   margin: 0;
-  font-family: 'TTFirs';
-  font-weight: 500;
-  font-style: normal;
+  width: 100%;
+  height: 100vh;
+  font-family: 'IBM Plex Sans';
 }
 img
 {
   object-fit: cover;
 }
+h1, h2, h3, h4, h5
+{
+  text-transform: uppercase;
+}
+
 a {
   color: inherit;
   text-decoration: none;
