Modal window is done

--- a/pages/components/Buttons/SquareBtn/SquareBtn.module.scss
+++ b/pages/components/Buttons/SquareBtn/SquareBtn.module.scss
@@ -8,8 +8,10 @@
     {
         font-size: 0.875em;
         line-height: 18px;
-        letter-spacing: 0.05em;
+        letter-spacing: .02em;
         text-transform: uppercase;
+        cursor: pointer;
+        width: 100%;
     }
 }
 .wrap_crimson
