--- a/pages/components/Inputs/HintInput/HintInput.module.scss
+++ b/pages/components/Inputs/HintInput/HintInput.module.scss
@@ -53,6 +53,24 @@ $title_color: (
         font-size: 12px;
         color: $crimson;
     }
+
+    .select
+    {
+        display: flex;
+        flex-direction: column;
+
+        & > div
+        {
+            display: flex;
+            flex-direction: column;
+            position: relative;
+
+            & > div
+            {
+                cursor: pointer;
+            }
+        }
+    }
 }
 .wrap_white
 {
