--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -341,7 +341,10 @@ h1, h2, h3, h4, h5
 {
   text-transform: uppercase;
 }
-
+select
+{
+  outline: none;
+}
 a {
   color: inherit;
   text-decoration: none;
