--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -341,9 +341,11 @@ h1, h2, h3, h4, h5
 {
   text-transform: uppercase;
 }
-select
+select, input
 {
   outline: none;
+  border: none;
+  background-color: transparent;
 }
 a {
   color: inherit;
