--- a/components/ModalWindows/SimpleWindow/SimpleWindow.module.scss
+++ b/components/ModalWindows/SimpleWindow/SimpleWindow.module.scss
@@ -5,6 +5,8 @@
     position: fixed;
     width: 100%;
     height: 100vh;
+    left: 0;
+    top: 0;
 
     .wrap_window
     {
@@ -70,6 +72,7 @@
     {
         display: grid;
         margin-top: 5%;
+        width: 100%;
         & > div:first-child
         {
             display: grid;
