--- a/pages/profile/index.module.scss
+++ b/pages/profile/index.module.scss
@@ -21,32 +21,62 @@
     @include title($night_blue);
     display: grid;
     grid-auto-flow: row;
-    grid-column: 5 / 9;
+    grid-column: 5 / 7;
     grid-row: 1 / 3;
 
-    & > div
+    & > div:last-child
     {
         display: grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr;
         & > div:first-child
         {
             display: grid;
             grid-auto-flow: row;
-            grid-template-rows: 1fr 4fr;
-            & > div:first-child
+            overflow-y: auto;
+            grid-gap: 5%;
+            height: 20vh;
+            
+            & > div
             {
-                width: 100%;
+                display: grid;
+                grid-auto-flow: column;
+                align-items: center;
+                & > div
+                {
+                    justify-self: end;
+                }
+                & img
+                {
+                    width: 1.5vw;
+                    height: 1.5vw;
+                }
             }
-            & > span
-            {
-                justify-self: stretch;
-                color: $grayish;
-            }
+            // grid-template-rows: 0.8fr 4fr;
+            // & > div:first-child
+            // {
+            //     width: 100%;
+            //     height: 70%;
+            // }
+            // & > span
+            // {
+            //     align-self: start;
+            //     justify-self: stretch;
+            //     color: $grayish;
+            // }
+
         }
-        & > div:last-child
-        {
-            margin-left: 10%;
-        }
+        // .shadow
+        // {
+        //     position: relative;
+        //     width: 100%;
+        //     height: 10vh;
+        //     left: 0;
+        //     top: 0;
+        //     margin-top: -50%;
+        //     z-index: 2;
+        //     background: linear-gradient(to top, $white, rgba(255, 255, 255, 0));
+        // }
+
     }
 }
 .networks
@@ -65,4 +95,14 @@
         grid-template-rows: repeat(2, 1fr);
 
     }
+}
+.forInvestors
+{
+    display: grid;
+    width: 100%;
+    grid-column: 7 / 12;
+    grid-row: 1 / 9;
+    margin-top: -4.5%;
+    margin-left: 2.6%;
+    background-color: $night_blue;
 }
