--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -341,7 +341,7 @@ h1, h2, h3, h4, h5
 {
   text-transform: uppercase;
 }
-select, input
+select, input, textarea
 {
   outline: none;
   border: none;
