--- a/components/ModalWindows/QuestionnaireWindow/QuestionnaireWindow.module.scss
+++ b/components/ModalWindows/QuestionnaireWindow/QuestionnaireWindow.module.scss
@@ -5,6 +5,7 @@
     display: grid;
     grid-auto-flow: row;
     grid-column-gap: 3%;
+    grid-row-gap: 10%;
     & div
     {
         justify-self: stretch !important;
