--- a/pages/profile/index.module.scss
+++ b/pages/profile/index.module.scss
@@ -8,7 +8,6 @@
 }
 .personal_data
 {
-    @include title($night_blue);
     display: grid;
     grid-row-gap: 15%;
     grid-auto-flow: row;
@@ -18,7 +17,6 @@
 }
 .profile
 {
-    @include title($night_blue);
     display: grid;
     grid-auto-flow: row;
     grid-column: 5 / 7;
@@ -85,7 +83,6 @@
     grid-auto-flow: row;
     grid-column: 1 / 6;
     grid-row: 5 / 7;
-    @include title($night_blue);
     & > div:last-child
     {
         display: grid;
@@ -99,10 +96,19 @@
 .forInvestors
 {
     display: grid;
+    grid-template-rows: repeat(9, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     width: 100%;
     grid-column: 7 / 12;
     grid-row: 1 / 9;
     margin-top: -4.5%;
     margin-left: 2.6%;
     background-color: $night_blue;
+
+    & > div:first-child
+    {
+        grid-column: 1 / 1;
+        grid-row: 1 / 2;
+        @extend %content_center;
+    }
 }
