--- a/components/Inputs/Select/Select.module.scss
+++ b/components/Inputs/Select/Select.module.scss
@@ -16,6 +16,7 @@
         {
             width: 100%;
             font-size: 14px;
+            border-bottom: 1px solid $color;
 
         }
         & > img
