--- a/components/ModalWindows/QuestionnaireWindow/QuestionnaireWindow.module.scss
+++ b/components/ModalWindows/QuestionnaireWindow/QuestionnaireWindow.module.scss
@@ -3,9 +3,15 @@
 .titles
 {
     display: grid;
-    grid-auto-flow: row;
+    grid-auto-flow: column;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(2, 1fr);
     grid-column-gap: 3%;
     grid-row-gap: 10%;
+    & > div:first-child
+    {
+        grid-template-columns: none !important;
+    }
     & div
     {
         justify-self: stretch !important;
@@ -20,13 +26,24 @@
     & > div
     {
         display: grid;
-        grid-template-columns: 0.1fr 1fr;
+        grid-template-columns: 0.1fr 1fr !important;
         grid-template-rows: repeat(2, 1fr);
         margin-top: 5%;
 
+        & > div > img
+        {
+            position: relative;
+            left: 3%;
+            top: 13%;
+            min-width: 5%;
+            cursor: pointer;
+        }
         & > div:last-child
         {
             grid-column: 1 / 3;
+            align-self: stretch !important;
+            justify-self: start;
+
         }
     }
 }
