Profile windows chain

--- a/components/Buttons/SimpleBtn/SimpleBtn.module.scss
+++ b/components/Buttons/SimpleBtn/SimpleBtn.module.scss
@@ -74,3 +74,23 @@
     @include wrap_btn($white, 'on');
     @extend %circle;
 }
+.wrap_circle_dark_blue
+{
+    @include wrap_btn($dark_blue, 'on');
+    @extend %circle;
+}
+.wrap_square_dark_blue
+{
+    @include wrap_btn($dark_blue, 'on');
+    @extend %circle;
+}
+.wrap_circle_night_blue
+{
+    @include wrap_btn($night_blue, 'on');
+    @extend %circle;
+}
+.wrap_square_night_blue
+{
+    @include wrap_btn($night_blue, 'on');
+    @extend %circle;
+}
