--- a/pages/profile/index.module.scss
+++ b/pages/profile/index.module.scss
@@ -13,6 +13,11 @@
     grid-auto-flow: row;
     grid-column: 3 / 4;
     grid-row: 1 / 2;
+
+    & input
+    {
+        text-align: center;
+    }
     
 }
 .profile
@@ -49,31 +54,10 @@
                     height: 1.5vw;
                 }
             }
-            // grid-template-rows: 0.8fr 4fr;
-            // & > div:first-child
-            // {
-            //     width: 100%;
-            //     height: 70%;
-            // }
-            // & > span
-            // {
-            //     align-self: start;
-            //     justify-self: stretch;
-            //     color: $grayish;
-            // }
+
 
         }
-        // .shadow
-        // {
-        //     position: relative;
-        //     width: 100%;
-        //     height: 10vh;
-        //     left: 0;
-        //     top: 0;
-        //     margin-top: -50%;
-        //     z-index: 2;
-        //     background: linear-gradient(to top, $white, rgba(255, 255, 255, 0));
-        // }
+
 
     }
 }
@@ -110,28 +94,6 @@
         grid-column: 1 / 1;
         grid-row: 1 / 2;
         @extend %content_center;
-    }
-}
-.titles_side
-{
-    display: grid;
-    grid-auto-flow: row;
-    grid-column: 1 / 5;
-
-    & > h3
-    {
-        color: $grayish;
-    }
-    & > h2
-    {
-        color: $night_blue;
-    }
-}
-.select_options
-{
-    div:last-child
-    {
-        margin-top: 4%;
     }
 }
 .textarea
