--- a/components/ModalWindows/QuestionnaireWindow/QuestionnaireWindow.module.scss
+++ b/components/ModalWindows/QuestionnaireWindow/QuestionnaireWindow.module.scss
@@ -37,6 +37,7 @@
             top: 13%;
             min-width: 5%;
             cursor: pointer;
+            z-index: 100;
         }
         & > div:last-child
         {
